<resources>
    <string name="app_name">Store</string>
    <string name="perfume_overview">Perfume Overview</string>
    <string name="perfume_name">Perfume Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="please_add_perfume">Please add Perfume</string>
    <string name="dummy_data_inserted">Dummy Data Inserted</string>
</resources>
