<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="@dimen/activity_margin"
    tools:context=".StoreEditor"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/perfume_overview"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_weight="1"
        />
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/perfume_name"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/price"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/quantity"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edit_supplier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/supplier_name"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edit_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone"/>


</LinearLayout>